--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,7 +1,11 @@
+
+# {{ StartDevOnlyBlock }}
 - appearByUpdate: "2021-01-29"
   disappearByUpdate: "2021-01-30"
   body: >
     Due to an issue with the processing of deaths data, the update for 29 January 2021 does not include any updates to deaths figures. These will be added later today.
+# {{ EndDevOnlyBlock }}
+
 
 - appearByUpdate: "2021-01-13"
   disappearByUpdate: "2021-01-14"
