--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -34,11 +34,11 @@
 # =~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=~=
 
 type:
-  #newMetric:     &newMetric     "NEW METRIC"
+  newMetric:     &newMetric     "NEW METRIC"
   newFeature:    &newFeature    "NEW"
-  #changedMetric: &changedMetric "CHANGE TO METRIC"
+  changedMetric: &changedMetric "CHANGE TO METRIC"
   update:        &update        "UPDATE"
-  #newContent:    &newContent    "NEW CONTENT"
+  newContent:    &newContent    "NEW CONTENT"
 
 
 colours:
@@ -46,21 +46,21 @@ colours:
       background: "#CCE2D8"
       text: "#005A30"
 
-    #- type: *newMetric
-     # background: "#BFE3E0"
-     # text: "#10403C"
+    - type: *newMetric
+      background: "#BFE3E0"
+      text: "#10403C"
 
-    #- type: *changedMetric
-     # background: "#FFF7BF"
-     # text: "#594D00"
+    - type: *changedMetric
+      background: "#FFF7BF"
+      text: "#594D00"
 
     - type: *update
       background: "#FCD6C3"
       text: "#6E3619"
 
-    #- type: *newContent
-     # background: "#DBD5E9"
-     # text: "#3D2375"
+    - type: *newContent
+      background: "#DBD5E9"
+      text: "#3D2375"
 
     #     background: "#EEEFEF"
     #     text: "#383F43"
@@ -78,10 +78,10 @@ colours:
 changeLog:
 
   - type: *newFeature
-    date: "2021-01-22"
+    date: "2021-02-03"
     displayBanner: false
-    relativeUrl: /details/updates
-    headline: New features and Updates - page launched 
+    relativeUrl: /details/whats-new
+    headline: What's new? - page launched 
     body: > 
       This page is a record of all important changes to the dashboard. 
       It will show newly added features such as new charts or metrics and 
@@ -89,24 +89,53 @@ changeLog:
       This page is there to highlight news that are important for most users - it is not a detailed log.
   
 
-  - type: *newFeature
-    date: "2021-01-19"
+  - type: *update
+    date: "2021-02-03"
+    displayBanner: false
+    relativeUrl: /details/deaths
+    headline: Correction to deaths for two age bands
+    body: > 
+      We have corrected a technical error which affected the deaths for the age groups 0-4 years and 40-44, albeit  
+      the impact was minimal due to the small numbers of deaths in either age group. 
+      The related charts which were offline while we were fixing the problem are back online.  
+
+- type: *newContent
+    date: "2021-01-11"
     displayBanner: false
     relativeUrl: /details/vaccinations
-    headline: Vaccinations
+    headline: Daily vaccinations added
+    body: > 
+      We can now report daily figures for vaccinations to provide a more detailed picture of the progress that is made in this area. 
+       
+
+- type: *newFeature
+    date: "2020-01-06"
+    displayBanner: false
+    relativeUrl: /easy_read
+    headline: New easy-read summary reports
+    body: > 
+      Accessibility is important for us and therefore we have improved the easy-read summaries on the dashboard. 
+      The contents has been reviewed and they are now in HTML which is accessible with most technologies.
+      A PDF-version is still there and can be downloaded from the page.  
+
+type: *newContent
+    date: "2020-12-24"
+    displayBanner: false
+    relativeUrl: /details/vaccinations
+    headline: Vaccinations 
     body: > 
       The vaccinations topic page is now live. 
       We know this information is important for people and this is the space where you'll find vaccinations data.
       We will be adding new data as it becomes available.  
 
- # - type: *newFeature
-  #  date: "2020-10-30"
-  #  displayBanner: true
-  #  relativeUrl: /details/download
-  #  headline: MSOA data have been added to the downloads page.
-  #  body: > 
-  #    Area types in the download page now include MSOAs. The data are now available for 
-  #    download by region, local authority, a single MSOA, or the full dataset. Downloaded 
-  #   conetnts will also include information on region and local authority as well as MSOA. 
+
+  - type: *changedMetric
+    date: "2020-12-11"
+    displayBanner: true
+    relativeUrl: /details/about-data#patients-in-hospital
+    headline: Alignment of Patients in Hospital figures with NHS England
+    body: > 
+      The coverage of data for patients in hospital was updated to align with NHS England publications 
+      and as a result the full time series for this item was revised. For details please follow the link. 
 
 
