--- a/Layouts/comms/banner.yaml
+++ b/Layouts/comms/banner.yaml
@@ -1,3 +1,14 @@
+- appearByUpdate: "2021-02-05"
+  disappearByUpdate: "2021-02-05"  
+  displayUri: 
+    - /
+    - /details/healthcare
+  body: >
+    Due to an issue with the processing of healthcare data for England, the most 
+    recent figures are incorrect. We are working to fix the issue and will publish 
+    corrected figures as soon as possible.
+
+
 - appearByUpdate: "2021-02-02"
   disappearByUpdate: "2021-02-09"
   body: >
