testing the new details section with some markdown layout features

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -101,9 +101,28 @@ changeLog:
       actually were because of a data error. This was corrected on 3 February 2021. 
     details: |
       On 2 February 2021 the breakdown of deaths by age for England was not included 
-      on the website. This issue only affected this single age group, the total number of 
-      deaths did not change. 
-
+      on the website. 
+      
+      This issue only affected this single age group, the total number of 
+      deaths is unaffected.
+      
+      # Here starts the testing 
+      ## Heading 2 
+      ### Heading 3
+      on the website.**On 2 February 2021**
+      1. On 2 February 2021 the breakdown of deaths by age for England was not included 
+      2. on the website.On 2 February 2021 the breakdown of deaths by age for England was not included 
+      3. on the website.On 2 February 2021 the breakdown of deaths by age for England was not included 
+      ### Heading 3
+      on the website.On 2 February 2021 the breakdown of deaths by age for England was not included 
+      on the website.On 2 February 2021 the breakdown of deaths by age for England was not included 
+      ### Heading 3
+      [link on the website](https://coronavirus.data.gov.uk/search?postcode=rg28+7bj).On 2 February 2021 the breakdown of deaths by age for England was not included 
+      
+      on the website.On 2 February 2021 the breakdown of deaths by age for England was not included 
+      on the website.On 2 February 2021 the breakdown of deaths by age for England was not included    
+   
+  
   - type: *newContent
     date: "2021-01-11"
     displayBanner: false
